# vale-events

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: backend-ci.yml
backend/: README.md  pyproject.toml  run.py
backend/src/: main.py
backend/src/features/process_events/: endpoint.py  handler.py
backend/src/scripts/: process_and_export.py
backend/src/shared/clients/: __init__.py  llm_client.py  ocr_client.py
backend/src/shared/models/: Event.py  __init__.py
features/process_events/: endpoint.py  handler.py
frontend/: README.md  jest.config.js  package-lock.json  package.json  svelte.config.js  vercel.json
frontend/src/: app.html
frontend/src/lib/: dateUtils.ts  eventUtils.ts  timeUtils.ts  types.ts
frontend/src/lib/__tests__/: eventUtils.test.ts  timeUtils.test.ts
frontend/src/routes/: +page.svelte
frontend/static/api/: events.json
scripts/: download_east_model.py
shared/clients/: __init__.py  llm_client.py  ocr_client.py
shared/models/: Event.py  Output.py  __init__.py
vale_events/: run.py
