[project]
name = "vale-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "imutils>=0.5.4",
    "layoutparser>=0.3.4",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
